--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <button>join the community</button>
             </div>
         </div>
-        <div style="width: 100%; height: 100vh;">
+        <div ">
             <div id="feature">
                 <h4>Featured in</h4>
                 <div style="display: flex; justify-content: space-around;">
@@ -42,7 +42,10 @@
                     <h3>THE TIMES OF INDIA</h3>
                 </div>
             </div>
-            <div></div>
+            <div style="text-align: center;">
+                <h4>About me</h4>
+                <h2 style="margin: 20px;">Entrepreneur, content creator, Finance Influencer</h2>
+            </div>
             <div></div>
             <div></div>
             <div></div>
