--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <button>join the community</button>
             </div>
         </div>
-        <div ">
+        <div>
             <div id="feature">
                 <h4>Featured in</h4>
                 <div style="display: flex; justify-content: space-around;">
@@ -46,9 +46,35 @@
                 <h4>About me</h4>
                 <h2 style="margin: 20px;">Entrepreneur, content creator, Finance Influencer</h2>
             </div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div id="round"></div>
+            <div id="para">
+                <p>Hi, I'm Finance With Sharan. I’m a former 
+                    management consultant at KPMG and PwC 
+                    where I worked with banks and NBFCs to 
+                    help them make a ton of money.
+                </p>
+                <p> 
+                    I now work as a full-time content creator 
+                    and help the common man make a ton of 
+                    money. 
+                </p>
+                <p>  
+                    I create engaging personal finance content 
+                    with a blend of comedic flavor and cosplay 
+                    on Instagram and YouTube. I also write 
+                    down highly action oriented posts on 
+                    LinkedIn and Twitter for those who are not 
+                    on social media platforms and prefer to read 
+                    it instead
+                </p>
+            </div>
+            <div style="text-align: center;">
+                <img src="images/insta.png" width="40px" height="40px">
+                <img src="images/fb.png" width="40px" height="40px">
+                <img src="images/linkedin.png" width="40px" height="40px">
+                <img src="images/twitter.png" width="40px" height="40px">
+                <img src="images/yt.png" width="40px" height="40px">
+            </div>
         </div>
     </div>
     <script>
