mobile design complete

--- a/index.html
+++ b/index.html
@@ -76,11 +76,202 @@
                 <img src="images/yt.png" width="40px" height="40px">
             </div>
         </div>
+        <div>
+            <div style="text-align: center; margin-top: 40px;">
+                <h4>Services</h4>
+                <h2 style="margin: 20px;">Start your journey towards financial freedom</h2>
+            </div>
+            <div id="tabs">
+                <button class="tablink wred" onclick="openSec(event,'Community')">Community</button>
+                <button class="tablink wblue" onclick="openSec(event,'Courses')">Courses</button>
+                <button class="tablink wblue" onclick="openSec(event,'Consult')">Consultation</button>
+            </div>
+            <div id="Community" class="section" style="padding: 15px;">
+                <h2>The 1% Club</h2>
+                <p style="line-height: 1.6;">
+                    Now, I'm on a mission to help you get to the 
+                    RICHEST 1% - one educational finance 
+                    content at a time
+                </p>
+                <ul>
+                    <li>Exclusive 1 on 1 interaction with the creator</li>
+                    <li>Connect with like minded folks, from diverse backgrounds & cities</li>
+                    <li>32+ Hours of Investing Tutorials, Tools & Community</li>
+                </ul>
+                <div id="pic2"></div>
+            </div>
+            <div id="Courses" class="section">
+                <div class="card">
+                    <img src="images/pic4.png">
+                    <h4 style="text-align: left; margin-left: 15px;">The 1% course</h4>
+                    <p style="text-align: left; margin-left: 15px;">Now, I'm on a mission to help you get to the 
+                        RICHEST 1% - one educational finance 
+                        content at a time</p>
+                    <button>Buy the course @ ₹3,999</button>
+                </div>               
+                <div class="card">
+                    <img src="images/pic4.png">
+                    <h4 style="text-align: left; margin-left: 15px;">The 1% course</h4>
+                    <p style="text-align: left; margin-left: 15px;">Now, I'm on a mission to help you get to the 
+                        RICHEST 1% - one educational finance 
+                        content at a time</p>
+                    <button>Buy the course @ ₹3,999</button>
+                </div>               
+                <div class="card">
+                    <img src="images/pic4.png">
+                    <h4 style="text-align: left; margin-left: 15px;">The 1% course</h4>
+                    <p style="text-align: left; margin-left: 15px;">Now, I'm on a mission to help you get to the 
+                        RICHEST 1% - one educational finance 
+                        content at a time</p>
+                    <button>Buy the course @ ₹3,999</button>
+                </div>               
+            </div>
+            <div id="Consult" class="section">
+                <div class="card" ">
+                    <div class="call"></div>
+                    <h3 style="text-align: left; margin-left: 15px; margin-bottom: 0; font-size: 17px;">SCO vs HEA Dream11 Team Prediction   | Dream11 </h3>
+                    <div class="info">
+                        <div>
+                            <img src="images/event.png" width="20px" height="20px">
+                            <p>12 Slots left</p>
+                        </div>
+                        <div>
+                            <img src="images/clock.png">
+                            <p>15 min</p>
+                        </div>
+                        <div>
+                            <p>₹ 99/slot</p>
+                        </div>
+                    </div>
+                    <button>View Details</button>
+                </div>
+                <div class="card" ">
+                    <div class="call" style="background-image: url(images/meet.png);"></div>
+                    <h3 style="text-align: left; margin-left: 15px; margin-bottom: 0; font-size: 17px;">SCO vs HEA Dream11 Team Prediction   | Dream11 </h3>
+                    <div class="info">
+                        <div>
+                            <img src="images/event.png" width="20px" height="20px">
+                            <p>12 Slots left</p>
+                        </div>
+                        <div>
+                            <img src="images/clock.png">
+                            <p>15 min</p>
+                        </div>
+                        <div>
+                            <p>₹ 99/slot</p>
+                        </div>
+                    </div>
+                    <button>View Details</button>
+                </div>
+                <div class="card" ">
+                    <div class="call"></div>
+                    <h3 style="text-align: left; margin-left: 15px; margin-bottom: 0; font-size: 17px;">SCO vs HEA Dream11 Team Prediction   | Dream11 </h3>
+                    <div class="info">
+                        <div>
+                            <img src="images/event.png" width="20px" height="20px">
+                            <p>12 Slots left</p>
+                        </div>
+                        <div>
+                            <img src="images/clock.png">
+                            <p>15 min</p>
+                        </div>
+                        <div>
+                            <p>₹ 99/slot</p>
+                        </div>
+                    </div>
+                    <button>View Details</button>
+                </div>
+            </div>
+        </div>
+        <div style="text-align: center;">
+            <h4>Testimonials</h4>
+            <h2>What community members are saying about us?</h2>
+            <div class="swiper">
+                <p style="line-height: 1.6; margin: 10px 30px;">Now, I'm on a mission to help you get 
+                    to the RICHEST 1% - one educational 
+                    finance content at a time. Now, I'm on 
+                    a mission to help you get to the 
+                    RICHEST 1% - one educational finance 
+                    content at a time.
+                </p>
+                <div class="Rustom"></div>
+                <b>Rustom Paji</b>
+                <p>Hotal owner</p>
+            </div>
+        </div>
+        <div style="text-align: center;">
+            <h4>Media section</h4>
+            <h2>Check out the intro video of the community</h2>
+            <video width="320" height="240" controls>
+                <source src="videos/video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+        <div id="semi">
+            <p style="margin: 0;">Get the app in one click!</p>
+            <h2>Hack your wealth journey into the 1% club</h2>
+        </div>
+        <div id="getapp">
+            <div id="devices"></div>
+            <div class="basebtn">
+                <button>join the community</button>
+            </div>
+        </div>
+        <div style="text-align: center; padding: 20px; background-color: white;">
+            <p style="margin: 0;">Contact us</p>
+            <h2 style="margin: 28px 10px;">Do you have any queries, feel free to reach out to us</h2>
+            <div class="lastcard">
+                <div class="emage">
+                    <img src="images/emage.png" width="25px" height="25px">
+                </div>
+                <div style="flex-grow: 1; text-align: left; margin-left: 15px;">
+                    <p style="margin: 0 0 5px 0; color: darkgray;">Email us</p>
+                    <a href="https://mail.google.com/mail/u/0/#compose" target="_blank" 
+                       style="text-decoration: none; color: black;">
+                        <b>Support@gmail.com</b>
+                    </a>
+                </div>
+            </div>
+            <div class="lastcard">
+                <div class="emage">
+                    <img src="images/whatsapp.png" width="25px" height="25px">
+                </div>
+                <div style="flex-grow: 1; text-align: left; margin-left: 15px;">
+                    <p style="margin: 0 0 5px 0; color: darkgray;">We are available on Whatsapp</p>
+                    <a href="https://mail.google.com/mail/u/0/#compose" target="_blank" 
+                       style="text-decoration: none; color: black;">
+                        <b>Click to Whatsapp</b>
+                    </a>
+                </div>
+            </div>
+            <div class="lastcard">
+                <div class="emage">
+                    <img src="images/call2.png" width="25px" height="25px">
+                </div>
+                <div style="flex-grow: 1; text-align: left; margin-left: 15px;">
+                    <p style="margin: 0 0 5px 0; color: darkgray;">Call for sales & Support</p>
+                    <a href="https://mail.google.com/mail/u/0/#compose" target="_blank" 
+                       style="text-decoration: none; color: black;">
+                        <b>+91-8460068722</b>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div id="footer">
+            <h3>Logo</h3>
+            <div style="text-align: center; margin-bottom: 30px;">
+                <img src="images/whiteinsta.png" width="40px" height="40px">
+                <img src="images/whitefb.png" width="40px" height="40px">
+                <img src="images/whiteln.png" width="40px" height="40px">
+                <img src="images/whitetw.png" width="40px" height="40px">
+                <img src="images/whiteyt.png" width="40px" height="40px">
+            </div>
+            <img src="images/download.png" width="60%">
+            <hr>
+            <p>© 2023 companyname. inc.</p>
+            <p>Privacy Policy &emsp; Terms of service</p>
+        </div>
     </div>
-    <script>
-        function myFunction(x) {
-          x.classList.toggle("change");
-        }
-    </script>
+    <script src="index.js"></script>
 </body>
 </html>
