--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <div style="text-align: center;">
             <h4>Media section</h4>
             <h2>Check out the intro video of the community</h2>
-            <video width="320" height="240" controls>
+            <video width="320" height="240" controls style="height: fit-content;">
                 <source src="videos/video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
