--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <div>
             <div id="feature">
                 <h4>Featured in</h4>
-                <div style="display: flex; justify-content: space-around;">
-                    <span><h3>mint</h3></span>
-                    <span><h3>The Economic Times</h3></span>
+                <div style="display: flex; justify-content: space-around; align-items: center;">
+                    <span id="mint"><h3>mint</h3></span>
+                    <span id="eco"><h3>The Economic Times</h3></span>
                 </div>
                 <div style="display: flex; justify-content: space-around;">
-                    <h3>Forbes</h3>
-                    <h3>THE TIMES OF INDIA</h3>
+                    <h3 id="forbes">Forbes</h3>
+                    <h3 id="times">THE TIMES OF INDIA</h3>
                 </div>
             </div>
             <div style="text-align: center;">
