desktop design complete

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
                 <div class="bar3"></div>
             </div>
         </header>
+        <header id="head2">
+            <h2 style="margin-left: 10%;">Logo</h2>
+            <div style="margin-right: 10%;">
+                <b>Join community</b>
+                <p>Contact us</p>
+            </div>
+        </header>
         <div id="content">
             <div id="heading">
                 <h2>Hack your wealth journey inside the 1% club</h2>
@@ -30,15 +37,33 @@
                 <button>join the community</button>
             </div>
         </div>
+        <div id="content-Desktop">
+            <div id="Desk">
+                <div id="headingd">
+                    <h1>Hack your wealth journey inside the 1% club</h1>
+                    <p style="line-height: 1.6;">
+                        A super premium annual subscription that will tranform your wealth planning and make
+                        you say- "Bro! I'm financially sorted!"
+                    </p>
+                </div>
+                <div class="basebtn">
+                    <button>join the community</button>
+                </div>
+            </div>
+            <div id="imaged">
+                <div id="small"></div>
+            </div>
+        </div>
         <div>
             <div id="feature">
                 <h4>Featured in</h4>
-                <div style="display: flex; justify-content: space-around; align-items: center;">
+                <div class="flexed">
+                    <span class="forbes Des"><h3>Forbes</h3></span>
                     <span id="mint"><h3>mint</h3></span>
                     <span id="eco"><h3>The Economic Times</h3></span>
                 </div>
-                <div style="display: flex; justify-content: space-around;">
-                    <h3 id="forbes">Forbes</h3>
+                <div class="flexed Sed">
+                    <h3 class="forbes">Forbes</h3>
                     <h3 id="times">THE TIMES OF INDIA</h3>
                 </div>
             </div>
@@ -68,7 +93,7 @@
                     it instead
                 </p>
             </div>
-            <div style="text-align: center;">
+            <div class="flexed" style="justify-content: center; gap: 10px;">
                 <img src="images/insta.png" width="40px" height="40px">
                 <img src="images/fb.png" width="40px" height="40px">
                 <img src="images/linkedin.png" width="40px" height="40px">
@@ -87,20 +112,27 @@
                 <button class="tablink wblue" onclick="openSec(event,'Consult')">Consultation</button>
             </div>
             <div id="Community" class="section" style="padding: 15px;">
-                <h2>The 1% Club</h2>
-                <p style="line-height: 1.6;">
-                    Now, I'm on a mission to help you get to the 
-                    RICHEST 1% - one educational finance 
-                    content at a time
-                </p>
-                <ul>
-                    <li>Exclusive 1 on 1 interaction with the creator</li>
-                    <li>Connect with like minded folks, from diverse backgrounds & cities</li>
-                    <li>32+ Hours of Investing Tutorials, Tools & Community</li>
-                </ul>
-                <div id="pic2"></div>
+                <div id="commu">
+                    <h2>The 1% Club</h2>
+                    <p style="line-height: 1.6;">
+                        Now, I'm on a mission to help you get to the 
+                        RICHEST 1% - one educational finance 
+                        content at a time
+                    </p>
+                    <ul>
+                        <li>Exclusive 1 on 1 interaction with the creator</li>
+                        <li>Connect with like minded folks, from diverse backgrounds & cities</li>
+                        <li>32+ Hours of Investing Tutorials, Tools & Community</li>
+                    </ul>
+                    <div id="hideme" class="basebtn">
+                        <button id="chg">join the community</button>
+                    </div>
+                </div>
+                <div id="nity">
+                    <div id="pic2"></div>
+                </div>
             </div>
-            <div id="Courses" class="section">
+            <div id="Courses" class="section" style="column-gap: 20px;">
                 <div class="card">
                     <img src="images/pic4.png">
                     <h4 style="text-align: left; margin-left: 15px;">The 1% course</h4>
@@ -186,23 +218,49 @@
         <div style="text-align: center;">
             <h4>Testimonials</h4>
             <h2>What community members are saying about us?</h2>
-            <div class="swiper">
-                <p style="line-height: 1.6; margin: 10px 30px;">Now, I'm on a mission to help you get 
-                    to the RICHEST 1% - one educational 
-                    finance content at a time. Now, I'm on 
-                    a mission to help you get to the 
-                    RICHEST 1% - one educational finance 
-                    content at a time.
-                </p>
-                <div class="Rustom"></div>
-                <b>Rustom Paji</b>
-                <p>Hotal owner</p>
+            <div class="flexed">
+                <div class="swiper">
+                    <p style="line-height: 1.6; margin: 10px 30px;">Now, I'm on a mission to help you get 
+                        to the RICHEST 1% - one educational 
+                        finance content at a time. Now, I'm on 
+                        a mission to help you get to the 
+                        RICHEST 1% - one educational finance 
+                        content at a time.
+                    </p>
+                    <div class="Rustom"></div>
+                    <b>Rustom Paji</b>
+                    <p>Hotal owner</p>
+                </div>
+                <div class="swiper test1">
+                    <p style="line-height: 1.6; margin: 10px 30px;">Now, I'm on a mission to help you get 
+                        to the RICHEST 1% - one educational 
+                        finance content at a time. Now, I'm on 
+                        a mission to help you get to the 
+                        RICHEST 1% - one educational finance 
+                        content at a time.
+                    </p>
+                    <div class="Rustom"></div>
+                    <b>Rustom Paji</b>
+                    <p>Hotal owner</p>
+                </div>
+                <div class="swiper test2">
+                    <p style="line-height: 1.6; margin: 10px 30px;">Now, I'm on a mission to help you get 
+                        to the RICHEST 1% - one educational 
+                        finance content at a time. Now, I'm on 
+                        a mission to help you get to the 
+                        RICHEST 1% - one educational finance 
+                        content at a time.
+                    </p>
+                    <div class="Rustom"></div>
+                    <b>Rustom Paji</b>
+                    <p>Hotal owner</p>
+                </div>
             </div>
         </div>
         <div style="text-align: center;">
             <h4>Media section</h4>
             <h2>Check out the intro video of the community</h2>
-            <video width="320" height="240" controls style="height: fit-content;">
+            <video width="320"  controls style="height: fit-content;">
                 <source src="videos/video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -212,7 +270,9 @@
             <h2>Hack your wealth journey into the 1% club</h2>
         </div>
         <div id="getapp">
-            <div id="devices"></div>
+            <div style="width: 70%;">
+                <div id="devices"></div>
+            </div>
             <div class="basebtn">
                 <button>join the community</button>
             </div>
@@ -220,40 +280,42 @@
         <div style="text-align: center; padding: 20px; background-color: white;">
             <p style="margin: 0;">Contact us</p>
             <h2 style="margin: 28px 10px;">Do you have any queries, feel free to reach out to us</h2>
-            <div class="lastcard">
-                <div class="emage">
-                    <img src="images/emage.png" width="25px" height="25px">
+            <div style="display: flex; justify-content: space-evenly;">
+                <div class="lastcard">
+                    <div class="emage">
+                        <img src="images/emage.png" width="25px" height="25px">
+                    </div>
+                    <div style="flex-grow: 1; text-align: left; margin-left: 15px;">
+                        <p style="margin: 0 0 5px 0; color: darkgray;">Email us</p>
+                        <a href="https://mail.google.com/mail/u/0/#compose" target="_blank" 
+                           style="text-decoration: none; color: black;">
+                            <b>Support@gmail.com</b>
+                        </a>
+                    </div>
                 </div>
-                <div style="flex-grow: 1; text-align: left; margin-left: 15px;">
-                    <p style="margin: 0 0 5px 0; color: darkgray;">Email us</p>
-                    <a href="https://mail.google.com/mail/u/0/#compose" target="_blank" 
-                       style="text-decoration: none; color: black;">
-                        <b>Support@gmail.com</b>
-                    </a>
+                <div class="lastcard">
+                    <div class="emage">
+                        <img src="images/whatsapp.png" width="25px" height="25px">
+                    </div>
+                    <div style="flex-grow: 1; text-align: left; margin-left: 15px;">
+                        <p style="margin: 0 0 5px 0; color: darkgray;">We are available on Whatsapp</p>
+                        <a href="https://mail.google.com/mail/u/0/#compose" target="_blank" 
+                           style="text-decoration: none; color: black;">
+                            <b>Click to Whatsapp</b>
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="lastcard">
-                <div class="emage">
-                    <img src="images/whatsapp.png" width="25px" height="25px">
-                </div>
-                <div style="flex-grow: 1; text-align: left; margin-left: 15px;">
-                    <p style="margin: 0 0 5px 0; color: darkgray;">We are available on Whatsapp</p>
-                    <a href="https://mail.google.com/mail/u/0/#compose" target="_blank" 
-                       style="text-decoration: none; color: black;">
-                        <b>Click to Whatsapp</b>
-                    </a>
-                </div>
-            </div>
-            <div class="lastcard">
-                <div class="emage">
-                    <img src="images/call2.png" width="25px" height="25px">
-                </div>
-                <div style="flex-grow: 1; text-align: left; margin-left: 15px;">
-                    <p style="margin: 0 0 5px 0; color: darkgray;">Call for sales & Support</p>
-                    <a href="https://mail.google.com/mail/u/0/#compose" target="_blank" 
-                       style="text-decoration: none; color: black;">
-                        <b>+91-8460068722</b>
-                    </a>
+                <div class="lastcard">
+                    <div class="emage">
+                        <img src="images/call2.png" width="25px" height="25px">
+                    </div>
+                    <div style="flex-grow: 1; text-align: left; margin-left: 15px;">
+                        <p style="margin: 0 0 5px 0; color: darkgray;">Call for sales & Support</p>
+                        <a href="https://mail.google.com/mail/u/0/#compose" target="_blank" 
+                           style="text-decoration: none; color: black;">
+                            <b>+91-8460068722</b>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -268,8 +330,10 @@
             </div>
             <img src="images/download.png" width="60%">
             <hr>
-            <p>© 2023 companyname. inc.</p>
-            <p>Privacy Policy &emsp; Terms of service</p>
+            <div style="    display: flex; justify-content: center; gap: 2rem;">
+                <p>© 2023 companyname. inc.</p>
+                <p>Privacy Policy &emsp; Terms of service</p>
+            </div>
         </div>
     </div>
     <script src="index.js"></script>
