--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <h2>Hack your wealth journey into the 1% club</h2>
         </div>
         <div id="getapp">
-            <div style="width: 70%;">
+            <div style="width: 70%; margin: 0 auto;">
                 <div id="devices"></div>
             </div>
             <div class="basebtn">
@@ -280,7 +280,7 @@
         <div style="text-align: center; padding: 20px; background-color: white;">
             <p style="margin: 0;">Contact us</p>
             <h2 style="margin: 28px 10px;">Do you have any queries, feel free to reach out to us</h2>
-            <div style="display: flex; justify-content: space-evenly;">
+            <div id="cont">
                 <div class="lastcard">
                     <div class="emage">
                         <img src="images/emage.png" width="25px" height="25px">
