--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             </div>
             <img src="images/download.png" width="60%">
             <hr>
-            <div style="    display: flex; justify-content: center; gap: 2rem;">
+            <div id="foot">
                 <p>© 2023 companyname. inc.</p>
                 <p>Privacy Policy &emsp; Terms of service</p>
             </div>
