--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                     you say- "Bro! I'm financially sorted!"
                 </p>
             </div>
-            <div id="image">
+            <div style="padding: 0 10px 0 20px;">
+                <div id="image"></div>
             </div>
             <div class="basebtn">
                 <button>join the community</button>
